syntax = "proto3";

package lockstep;

// The greeting service definition.
service LockStepService {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayStream(stream HelloRequest) returns (stream HelloReply) {}
}

enum MessageType {
  Ping = 0;
  Pong = 1;
  ReqMissFrame = 2;
  ReqMissFrameAck = 3;
  RepMissFrame = 4;
  HashCode = 5;
  PlayerInput = 6;
  FrameData = 7;
}

enum EGameState {
    Idle = 0;
    Loading = 1;
    PartLoaded = 2;
    Playing = 3;
    PartFinished = 4;
    FinishAll = 5;
}

// The request message containing the user's name.
message HelloRequest {
  MessageType msgType = 1;
  string name = 2;
}

// The response message containing the greetings
message HelloReply {
  MessageType msgType = 1;
  string message = 2;
}
